# iirabm

./: CMakeLists.txt  README.md
src/: SepsisIOmacros.h  simulationControl.cpp  simulationControl.h
src/core/: Parameters.cpp  Parameters.h  agentConstructors.cpp  agents.h  cellFunctions.cpp  environment.cpp  environment.h  simulationFunctions.cpp  simulationFunctions.h
